--- a/reflections_team.html
+++ b/reflections_team.html
@@ -213,7 +213,7 @@
                         </svg>
                         Overview
                     </a>
-                    <a href="usecases.html" class="nav-link">
+                    <a href="businesscases.html" class="nav-link">
                         <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
                         </svg>
