--- a/reflections_team.html
+++ b/reflections_team.html
@@ -252,7 +252,7 @@
                 </div>
             </a>
 
-            <a href="mallikarjun/mallikarjun_reflect.html" class="case-card">
+            <a href="https://vaishnavi1702-v.github.io/urban_navigation_and_safety.github.ho/reflection_vaishnavi.html" class="case-card">
                 <h2>Vaishnavi</h2>
                 <div class="card-content">
                     <p>View personal reflections and insights</p>
