--- a/refections_sachidanand.html
+++ b/refections_sachidanand.html
@@ -273,6 +273,14 @@
         </div>
     </header>
 
+     <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+     <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
     <main class="container">
         <section class="hero fade-in">
             <h2 class="gradient-text glow">Learning Journey</h2>
